# 4denoise

./: DEMO_exp_4dstem_ripple_processing.ipynb  MoSe2_monolayer.cif  README.md  abTEM_helpers.py  conda-spec-win-64.txt  environment.lock.yml  environment.yml  fourdenoise.py  generateSimulatedRipple_4Ddata.ipynb  gui.m  kin_diff_sim.py  mose2_lattice.cif  proc4D.py  pyproject.toml  requirements.lock.txt  requirements.txt  rippleModel.py
helpers/: Si3N4.cif  WS2_WSe2_superlattice_processing.ipynb  WSe2_mono.cif  WSe2_sim_ripple_processing.ipynb  abTEM_helpers.py  atomicRes_exp_processing.ipynb  proc4D.py  rippleModel.py
